tests/errors/raise_uncaught.dang
# An uncaught raise should crash the program
let result = raise "unhandled error"
